trunk/Archive2/97/011d5346a61a98/output
main.cpp: In function 'int main()':
main.cpp:5:11: error: invalid types 'unsigned int[short unsigned int]' for array subscript
     x[y][y];
           ^
